
[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.black]
max-line-length = 88
target-version = ['py37', 'py38', 'py39']

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "fixme",
    "line-too-long",
    "no-else-return",
    "missing-docstring",
]

[tool.pylint.logging]
logging-format-style = "new"
