
[metadata]
name = pwproc
version = attr: pwproc.__version__
author = Aaron Schankler
author_email = ams19@sas.upenn.edu
description = Output parsers and utilities for Quantum ESPRESSO
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/aschankler/pwproc
project_urls =
    Bug Reports = https://github.com/aschankler/pwproc/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pwproc = pwproc.cli:cli

