[metadata]
name = pwproc
version = attr: pwproc.__version__
description = Output parsers and utilities for Quantum ESPRESSO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aschankler/pwproc
author = Aaron Schankler
author_email = ams19@sas.upenn.edu
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Bug Reports = https://github.com/aschankler/pwproc/issues

[options]
packages = find:
install_requires =
    numpy
    scipy
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pwproc = pwproc.cli:cli

[flake8]
max-line-length = 88
select = C,E,F,W,B,B901,B950,SIM,C4
ignore = E203,E501,SIM106
max-complexity = 10
exclude = .git, __pycache__, build, dist
per-file-ignores =
    __init__.py: F401
